--- a/Projeto/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/Projeto/frontend/src/app/components/product/product-create/product-create.component.html
@@ -2,4 +2,10 @@
 
 <button (click)="fazerAlgo()">Fazer Algo!</button> -->
 
-<p>product-create works!</p>
+<button mat-raised-button (click)="createProduct()" color="primary">
+    Salvar
+</button>
+
+<button mat-raised-button (click)="cancel()">
+    Cancelar
+</button>
